<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/photoView"
        android:layout_marginTop="40dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/dateLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:background="@android:color/white"
            android:focusableInTouchMode="true"
            android:cursorVisible="true"
            android:drawableStart="@drawable/ic_calendar"
            />
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="8dp"
            android:checkedButton="@id/kgRadio"
            app:layout_constraintTop_toBottomOf="@id/dateText">

            <RadioButton
                android:id="@+id/kgRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RadioButton"
                android:text="@string/kgs"/>

            <View style="@style/Divider" />

            <RadioButton
                android:id="@+id/lbRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RadioButton"
                android:text="@string/lbs"/>

            <View style="@style/Divider" />
        </RadioGroup>

    </com.google.android.material.textfield.TextInputLayout>
<LinearLayout
    android:id="@+id/imageLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintVertical_bias="0.7"
    app:layout_constraintHorizontal_bias="0.5"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/takePhoto"
        android:layout_width="100dp"
        android:layout_margin="30dp"
        android:textSize="17sp"
        android:background="@color/teal_200"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"/>
    <TextView
        android:id="@+id/getPhoto"
        android:layout_margin="30dp"
        android:layout_width="100dp"
        android:background="@color/teal_200"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textAlignment="center"
        android:text="@string/gallery"/>
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>