<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ImageView
    android:id="@+id/photo"
    android:layout_width="200dp"
    android:layout_height="200dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    />
    <TextView
        android:id="@+id/weight_text"
        style="@style/ItemText"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/photo"
        android:textColor="@color/gray"
        android:text="@string/weight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/weight_value"
        style="@style/ItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/photo"

        app:layout_constraintTop_toBottomOf="@id/weight_text"
        />

    <TextView
        android:id="@+id/dob_text"
        style="@style/ItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/photo"
        android:textColor="@color/gray"
        android:text="@string/dob"
        app:layout_constraintTop_toBottomOf="@id/weight_value"
        />
    <TextView
        android:id="@+id/dob_value"
        style="@style/ItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/photo"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/dob_text"
        />

    <TextView
        android:id="@+id/edit_text"
        style="@style/ItemText"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/photo"
        android:textColor="@color/cyan"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@id/dob_value"
        />

    <View
        android:id="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="20dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo"
        />
</androidx.constraintlayout.widget.ConstraintLayout>